--- a/search-index/search-index/src/test/resources/producer.properties
+++ b/search-index/search-index/src/test/resources/producer.properties
@@ -3,3 +3,4 @@ serializer.class=kafka.serializer.StringEncoder
 topic=composite-search-new
 partition_domain=2
 partition_concept=1
+partition_word=0
