--- a/platform-core/graph-engine/module/graph-dac-api/pom.xml
+++ b/platform-core/graph-engine/module/graph-dac-api/pom.xml
@@ -45,5 +45,17 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+			<groupId>org.ekstep</groupId>
+			<artifactId>searchindex-producer</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
+			<groupId>org.ekstep</groupId>
+			<artifactId>searchindex-common</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
+		</dependency>
 	</dependencies>
 </project>
