--- a/searchIndex-platform/pom.xml
+++ b/searchIndex-platform/pom.xml
@@ -21,7 +21,7 @@
 		<module>module/searchindex-consumer</module>
 		<module>module/searchindex-producer</module>
 		<module>module/searchindex-elasticsearch</module>
-		<module>module/common</module>
+		<module>module/searchindex-common</module>
 	</modules>
 
 	<dependencies>
