--- a/platform-modules/service/pom.xml
+++ b/platform-modules/service/pom.xml
@@ -58,8 +58,14 @@
 			<version>1.0-SNAPSHOT</version>
 			<type>jar</type>
 		</dependency>
+		<dependency>
+			<groupId>org.ekstep</groupId>
+			<artifactId>composite-search-api</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
+		</dependency>
 	</dependencies>
-	
+
 	<build>
 		<pluginManagement>
 			<plugins>
@@ -79,6 +85,13 @@
 						<target>${maven.compiler.source}</target>
 					</configuration>
 				</plugin>
+				<plugin>
+		            <groupId>org.apache.maven.plugins</groupId>
+		            <artifactId>maven-war-plugin</artifactId>
+		            <configuration>
+		                <outputDirectory>/Users/ilimi/TOOLS_HOME/apache-tomcat-8.0.30/webapps</outputDirectory>
+		            </configuration>
+		        </plugin>
 			</plugins>
 		</pluginManagement>
 		<finalName>taxonomy-service</finalName>
