--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 	</properties>
 
 	<modules>
+		<module>searchindex-platform</module>
 		<module>platform-core</module>
 		<module>platform-modules</module>
 		<module>language-platform</module>
@@ -25,7 +26,7 @@
 	</modules>
 
 	<dependencies>
-		
+
 	</dependencies>
 
 	<build>
