update search API to search on concepts, dimensions and domains

--- a/platform-modules/service/src/main/resources/language-map.properties
+++ b/platform-modules/service/src/main/resources/language-map.properties
@@ -1,8 +1,8 @@
-hi=hindi
-en=english
-te=telugu
-ka=kannada
-ta=tamil
+hi=Hindi
+en=English
+te=Telugu
+ka=Kannada
+ta=Tamil
 test=testLanguage
 testone=testone
 testoneload=testoneload
