--- a/searchIndex-platform/module/searchindex-common/pom.xml
+++ b/searchIndex-platform/module/searchindex-common/pom.xml
@@ -66,5 +66,10 @@
 			<artifactId>jest</artifactId>
 			<version>2.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.xml</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.1</version>
+		</dependency>
 	</dependencies>
 </project>
