reverted unicode matching as it is working only for hindi

--- a/language-platform/module/indexes/src/test/resources/language-indexes.properties
+++ b/language-platform/module/indexes/src/test/resources/language-indexes.properties
@@ -1,7 +1,7 @@
 elastic-search-host=http://localhost
 elastic-search-port=9200
-ignoreStartWordsList=<Sentence,id=,<fs,head=,case_name=,paradigm=,name=,inf=
-tagNamesList=NN,NST,PRP,DEM,VM,VAUX,JJ,RB,PSP,RP,CC,WQ,QF,QC,QO,CL,INTF,INJ,NEG,*C,RDP,ECH,UNK,NP,VGF,VGNF,VGINF,VGNN,JJP,RBP,NEGP,CCP,FRAGP,BLK
+ignoreStartWordsList=<Sentence,id=,<fs,head=,case_name=,paradigm=,name=,inf=,poslcat=
+tagNamesList=NN,NST,PRP,DEM,VM,VAUX,JJ,RB,PSP,RP,CC,WQ,QF,QC,QO,CL,INTF,INJ,NEG,*C,RDP,ECH,UNK,NP,VGF,VGNF,VGINF,VGNN,JJP,RBP,NEGP,CCP,FRAGP,BLK,XC
 discardTokensList=NNP,((,)),SYM
 attributesTagIdentifier=af
 specialCharRegEx=^([$&+,:;=?@#|!]*)$
