--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@ quiz-app/resources
 quiz-app/www
 .classpath
 .cache-main
+platform-tools/scripts/orchestrator/node_modules/
+coverageReport/
+platform-modules/service/src/main/webapp/WEB-INF/lib/httpclient-4.5.1.jar
+platform-modules/service/src/main/webapp/WEB-INF/lib/httpcore-4.4.4.jar
