--- a/platform-modules/manager/pom.xml
+++ b/platform-modules/manager/pom.xml
@@ -80,5 +80,10 @@
 			<version>1.1.6</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20160212</version>
+		</dependency>
 	</dependencies>
 </project>
