code refactoring  and getArpabet API

--- a/language-platform/module/common/pom.xml
+++ b/language-platform/module/common/pom.xml
@@ -47,6 +47,11 @@
 			<version>2.4</version>
 			<classifier>jdk15</classifier>
 		</dependency>
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.6.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
