--- a/language-platform/module/common/src/test/resources/language-indexes.properties
+++ b/language-platform/module/common/src/test/resources/language-indexes.properties
@@ -7,3 +7,6 @@ attributesTagIdentifier=af
 specialCharRegEx=^([$&+,:;=?@#|!]*)$
 numberRegEx=^([+-]?\\d*\\.?\\d*)$
 defaultTokenCountAfterWord=10
+redis.host=localhost
+redis.port=6379
+redis.maxConnections=128
