Population of graph

--- a/language-platform/module/common/src/test/resources/language-map.properties
+++ b/language-platform/module/common/src/test/resources/language-map.properties
@@ -1,13 +1,9 @@
-hi=hindi
-en=english
-te=telugu
-ka=kannada
-ta=tamil
-test=testLanguage
-testone=testone
-testoneload=testoneload
-testload=testLoadLanguage
-testdictionary=testdictionary
-testcreatedictionary=testcreatedictionary
-testsearch=testsearch
-testparser=testparser
+hi=Hindi
+en=English
+te=Telugu
+ka=Kannada
+ta=Tamil
+as=Assamese
+be=Bengali
+bo=Bodo
+gu=Gujarati
