--- a/language-platform/module/indowordnetimporter/pom.xml
+++ b/language-platform/module/indowordnetimporter/pom.xml
@@ -38,6 +38,16 @@
 			<version>3.4</version>
 		</dependency>
 		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.activation</groupId>
+			<artifactId>activation</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 			<version>4.1.4.Final</version>
