--- a/platform-modules/manager/pom.xml
+++ b/platform-modules/manager/pom.xml
@@ -85,5 +85,11 @@
 			<artifactId>json</artifactId>
 			<version>20160212</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.tika</groupId>
+			<artifactId>tika-core</artifactId>
+			<version>1.12</version>
+		</dependency>
+		
 	</dependencies>
 </project>
