changes to the properties

--- a/platform-modules/service/src/test/resources/database.properties
+++ b/platform-modules/service/src/test/resources/database.properties
@@ -1,5 +1,5 @@
 db.driverClassName=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://lp-sandbox-db.cm8jepwsnit8.ap-southeast-1.rds.amazonaws.com:3306/lpbuilddb
+db.url=jdbc:mysql://lp-sandbox-db.cm8jepwsnit8.ap-southeast-1.rds.amazonaws.com:3306/lpbuilddb?characterEncoding=UTF-8
 db.username=lpsandboxdb
 db.password=lp5andb0x
 db.initialSize=2
@@ -12,3 +12,6 @@ hibernate.hbm2ddl.auto=none
 hibernate.default_schema=lpbuilddb
 hibernate.packagesToScan=com.ilimi
 hibernate.jdbc.batch_size=3
+hibernate.connection.CharSet=UTF-8
+hibernate.connection.characterEncoding=UTF-8
+hibernate.connection.useUnicode=true
