--- a/searchIndex-platform/module/searchindex-producer/pom.xml
+++ b/searchIndex-platform/module/searchindex-producer/pom.xml
@@ -67,5 +67,10 @@
 			<version>2.4</version>
 			<classifier>jdk15</classifier>
 		</dependency>
+		<dependency>
+			<groupId>com.ilimi</groupId>
+			<artifactId>platform-common</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
