implement slugs feature

--- a/platform-modules/manager/pom.xml
+++ b/platform-modules/manager/pom.xml
@@ -90,5 +90,10 @@
             <artifactId>im4java</artifactId>
             <version>1.4.0</version>
         </dependency>
+        <dependency>
+    		<groupId>com.moparisthebest</groupId>
+    		<artifactId>junidecode</artifactId>
+    		<version>0.1.1</version>
+		</dependency>
 	</dependencies>
 </project>
