--- a/platform-devops/docker/taxonomy-service/src/docker/Dockerfile
+++ b/platform-devops/docker/taxonomy-service/src/docker/Dockerfile
@@ -29,6 +29,9 @@ RUN make
 RUN cp src/redis-server /usr/local/bin/
 RUN cp src/redis-cli /usr/local/bin/
 
+# Install image magick
+RUN apt-get install imagemagick
+
 # Switch to tomcat director
 WORKDIR $CATALINA_HOME
 
