--- a/platform-core/platform-dac/pom.xml
+++ b/platform-core/platform-dac/pom.xml
@@ -155,6 +155,11 @@
 			<version>1.2.0</version>
 		</dependency>
 		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.6.2</version>
+		</dependency>
+		<dependency>
 			<groupId>org.modelmapper</groupId>
 			<artifactId>modelmapper</artifactId>
 			<version>0.5.6</version>
