--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ platform-tools/scripts/orchestrator/node_modules/
 coverageReport/
 platform-modules/service/src/main/webapp/WEB-INF/lib/httpclient-4.5.1.jar
 platform-modules/service/src/main/webapp/WEB-INF/lib/httpcore-4.4.4.jar
+.recommenders*
+.metadata
+Servers
