--- a/searchIndex-platform/module/searchindex-consumer/pom.xml
+++ b/searchIndex-platform/module/searchindex-consumer/pom.xml
@@ -33,7 +33,13 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -89,6 +95,12 @@
 			<groupId>io.searchbox</groupId>
 			<artifactId>jest</artifactId>
 			<version>2.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.ekstep</groupId>
+			<artifactId>searchindex-producer</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
 		</dependency>
 	</dependencies>
 </project>
