--- a/platform-modules/manager/pom.xml
+++ b/platform-modules/manager/pom.xml
@@ -90,6 +90,10 @@
 			<artifactId>tika-core</artifactId>
 			<version>1.12</version>
 		</dependency>
-		
+		<dependency>
+		    <groupId>xmlunit</groupId>
+		    <artifactId>xmlunit</artifactId>
+		    <version>1.4</version>
+		</dependency>
 	</dependencies>
 </project>
