--- a/platform-modules/manager/pom.xml
+++ b/platform-modules/manager/pom.xml
@@ -90,10 +90,11 @@
 			<artifactId>tika-core</artifactId>
 			<version>1.12</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.xmlunit/xmlunit-core -->
 		<dependency>
-		    <groupId>xmlunit</groupId>
-		    <artifactId>xmlunit</artifactId>
-		    <version>1.4</version>
+		    <groupId>org.xmlunit</groupId>
+		    <artifactId>xmlunit-core</artifactId>
+		    <version>2.2.0</version>
 		</dependency>
 	</dependencies>
 </project>
