--- a/searchIndex-platform/module/searchindex-common/pom.xml
+++ b/searchIndex-platform/module/searchindex-common/pom.xml
@@ -71,5 +71,10 @@
 			<artifactId>jaxb-api</artifactId>
 			<version>2.1</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.ilimi</groupId>
+		    <artifactId>platform-common</artifactId>
+		    <version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
