logstash configuration changes to retries when kafka is down

--- a/platform-modules/service/src/main/resources/logstash-ekstep.conf
+++ b/platform-modules/service/src/main/resources/logstash-ekstep.conf
@@ -17,14 +17,16 @@ filter {
 }
 
 output {
-  stdout {}
   kafka {
    bootstrap_servers => "localhost:9092"
    codec => plain {
             format => "%{message}"
         }
-  topic_id => "composite-search-topic"
+   topic_id => "composite-search-topic"
+   retries => 10
+   retry_backoff_ms => 60000
  }
+
 }
 
 
