--- a/language-platform/module/controllers/pom.xml
+++ b/language-platform/module/controllers/pom.xml
@@ -81,6 +81,12 @@
 			<version>${spring.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.ekstep</groupId>
+			<artifactId>composite-search-api</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<scope>jar</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
