--- a/platform-devops/ansible/setup/roles/aws-login/defaults/main.yml
+++ b/platform-devops/ansible/setup/roles/aws-login/defaults/main.yml
@@ -1,2 +1,4 @@
 ---
 # defaults file for aws-login
+access: "{{ lookup('env', 'aws_access_key') }}"
+secret: "{{ lookup('env', 'aws_secret_key') }}"
