--- a/platform-devops/ansible/setup/roles/elasticsearch/tasks/main.yml
+++ b/platform-devops/ansible/setup/roles/elasticsearch/tasks/main.yml
@@ -12,10 +12,10 @@
   service: name=elasticsearch state=stopped
 
 - name: copy  
-  copy: src=elasticsearch.yml dest=/etc/elasticsearch/elasticsearch.yml
+  template: src=elasticsearch.yml dest=/etc/elasticsearch/elasticsearch.yml
 
 - name: Change plugins folder permissions
-  file: path=/usr/share/elasticsearch/plugins owner=root group=root mode=655 recurse=yes state=directory
+  file: path=/usr/share/elasticsearch/plugins owner=ec2-user group=ec2-user mode=655 recurse=yes state=directory
 
 - stat: path=/usr/share/elasticsearch/plugins/head
   register: check_head
@@ -32,22 +32,18 @@
   register: check_mapper
 
 - name: Install plugin elasticsearch-head
-  #command: /usr/share/elasticsearch/bin/plugin install mobz/elasticsearch-head
   elasticsearch_plugin: state=present name="mobz/elasticsearch-head"
   when: check_head.stat.exists == False
 
 - name:  Install plugin  analysis-icu
-#  command: /usr/share/elasticsearch/bin/plugin install analysis-icu
   elasticsearch_plugin: state=present name="analysis-icu"
   when: check_icu.stat.exists == False
 
 - name:  Install plugin delete-by-query
-#  command: /usr/share/elasticsearch/bin/plugin install delete-by-query
   elasticsearch_plugin: state=present name="delete-by-query"
   when: check_delete.stat.exists == False
 
 - name:  Install plugin  mapper-murmur3
-#  command: /usr/share/elasticsearch/bin/plugin install mapper-murmur3
   elasticsearch_plugin: state=present name="mapper-murmur3"
   when: check_mapper.stat.exists == False
 
