--- a/platform-devops/ansible/setup/roles/logstash/tasks/main.yml
+++ b/platform-devops/ansible/setup/roles/logstash/tasks/main.yml
@@ -8,13 +8,20 @@
 
 
 - name: copy config file
-  template: src=logstash-ekstep.j2 dest=/home/ec2-user/logstash-2.3.3/logstash-ekstep.conf
+  template: src=logstash-graph-events.j2 dest=/home/ec2-user/logstash-2.3.3/logstash-graph-events.conf
 
 - name: set permissions
   become: yes
   file: path=/home/ec2-user/logstash-2.3.3 owner=ec2-user group=ec2-user mode=0755 recurse=yes 
 
+- name: Check if logstash is running
+  become: yes
+  become_user: ec2-user
+  shell: ps -ef | grep logstash | grep logstash-graph-events.conf | grep -v grep
+  register: logstash_process
+
 - name: Run logstash
-  shell: chdir=/home/ec2-user/logstash-2.3.3  bin/logstash -f /home/ec2-user/logstash-2.3.3/logstash-ekstep.conf -v &
+  shell: chdir=/home/ec2-user/logstash-2.3.3  bin/logstash -f /home/ec2-user/logstash-2.3.3/logstash-graph-events.conf -v &
+  when: "logstash_process.stdout == -1"
 
  
