--- a/language-platform/module/controllers/pom.xml
+++ b/language-platform/module/controllers/pom.xml
@@ -21,18 +21,6 @@
 			<version>1.3.1</version>
 		</dependency>
 		<dependency>
-			<groupId>com.ilimi</groupId>
-			<artifactId>ekstep-manager</artifactId>
-			<version>1.0-SNAPSHOT</version>
-			<type>jar</type>
-		</dependency>
-		<dependency>
-			<groupId>com.ilimi</groupId>
-			<artifactId>ekstep-common</artifactId>
-			<version>1.0-SNAPSHOT</version>
-			<type>jar</type>
-		</dependency>
-		<dependency>
 			<groupId>org.ekstep</groupId>
 			<artifactId>language-common</artifactId>
 			<version>1.0-SNAPSHOT</version>
@@ -79,6 +67,13 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<version>${spring.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.ilimi</groupId>
+			<artifactId>ekstep-manager</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
