--- a/language-platform/module/indexes/pom.xml
+++ b/language-platform/module/indexes/pom.xml
@@ -20,6 +20,7 @@
 			<artifactId>ekstep-manager</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<type>jar</type>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.ekstep</groupId>
