refactoring of modules: remove orchestrator dependency on ekstep-manager and language-controller modules

--- a/language-platform/pom.xml
+++ b/language-platform/pom.xml
@@ -26,6 +26,7 @@
 		<module>module/controllers</module>
 		<module>module/common</module>
 		<module>module/indexes</module>
+		<module>module/actors</module>
 		<module>module/indowordnetimporter</module>
 	</modules>
 
