--- a/searchIndex-platform/module/search-service/pom.xml
+++ b/searchIndex-platform/module/search-service/pom.xml
@@ -2,12 +2,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.ilimi</groupId>
-		<artifactId>ekstep-modules</artifactId>
+		<groupId>org.ekstep</groupId>
+		<artifactId>searchindex-platform</artifactId>
 		<version>1.0-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
+		<relativePath>../../pom.xml</relativePath>
 	</parent>
-	<artifactId>ekstep-service</artifactId>
+	<artifactId>search-service</artifactId>
     <packaging>war</packaging>
 	<properties>
 		<maven.compiler.source>1.7</maven.compiler.source>
@@ -41,32 +41,8 @@
 			<version>2.4</version>
 		</dependency>
 		<dependency>
-			<groupId>com.ilimi</groupId>
-			<artifactId>ekstep-manager</artifactId>
-			<version>1.0-SNAPSHOT</version>
-			<type>jar</type>
-		</dependency>
-		<dependency>
 			<groupId>org.ekstep</groupId>
-			<artifactId>language-controller</artifactId>
-			<version>1.0-SNAPSHOT</version>
-			<type>jar</type>
-		</dependency>
-		<dependency>
-			<groupId>com.ilimi</groupId>
-			<artifactId>orchestrator-service</artifactId>
-			<version>1.0-SNAPSHOT</version>
-			<type>jar</type>
-		</dependency>
-		<dependency>
-			<groupId>org.ekstep</groupId>
-			<artifactId>searchindex-consumer</artifactId>
-			<version>1.0-SNAPSHOT</version>
-			<type>jar</type>
-		</dependency>
-		<dependency>
-			<groupId>org.ekstep</groupId>
-			<artifactId>searchindex-elasticsearch</artifactId>
+			<artifactId>composite-search-api</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<type>jar</type>
 		</dependency>
@@ -94,6 +70,6 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
-		<finalName>taxonomy-service</finalName>
+		<finalName>search-service</finalName>
 	</build>
 </project>
