--- a/language-platform/pom.xml
+++ b/language-platform/pom.xml
@@ -28,6 +28,7 @@
 		<module>module/indexes</module>
 		<module>module/actors</module>
 		<module>module/indowordnetimporter</module>
+		<module>module/services</module>
 	</modules>
 
 	<dependencies>
