--- a/platform-modules/service/pom.xml
+++ b/platform-modules/service/pom.xml
@@ -7,7 +7,7 @@
 		<version>1.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
-	<artifactId>ekstep-service</artifactId>
+	<artifactId>learning-service</artifactId>
     <packaging>war</packaging>
 	<properties>
 		<maven.compiler.source>1.7</maven.compiler.source>
@@ -82,6 +82,6 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
-		<finalName>taxonomy-service</finalName>
+		<finalName>learning-service</finalName>
 	</build>
 </project>
