--- a/language-platform/module/services/src/main/webapp/WEB-INF/web.xml
+++ b/language-platform/module/services/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,10 @@
                       http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	version="3.0" metadata-complete="true">
 	<context-param>
+		<param-name>webAppRootKey</param-name>
+		<param-value>language-service</param-value>
+	</context-param>
+	<context-param>
 		<param-name>log4jConfigLocation</param-name>
 		<param-value>classpath:log4j2.xml</param-value>
 	</context-param>
