--- a/platform-modules/service/src/test/resources/graph.properties
+++ b/platform-modules/service/src/test/resources/graph.properties
@@ -3,4 +3,5 @@ redis.host=localhost
 redis.port=6379
 redis.maxConnections=128
 akka.request_timeout=30
+graph.ids=language,en,hi,ka,te,ta
 environment.id=10000000
