--- a/searchIndex-platform/module/search-service/src/main/webapp/WEB-INF/web.xml
+++ b/searchIndex-platform/module/search-service/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,10 @@
                       http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	version="3.0" metadata-complete="true">
 	<context-param>
+		<param-name>webAppRootKey</param-name>
+		<param-value>search-service</param-value>
+	</context-param>
+	<context-param>
 		<param-name>log4jConfigLocation</param-name>
 		<param-value>classpath:log4j2.xml</param-value>
 	</context-param>
@@ -35,12 +39,6 @@
 			<param-value>classpath:servlet-context.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
-	</servlet>
-
-	<servlet>
-		<servlet-name>init-servlet</servlet-name>
-		<servlet-class>com.ilimi.servlet.InitServlet</servlet-class>
-		<load-on-startup>2</load-on-startup>
 	</servlet>
 
 	<servlet-mapping>
