--- a/platform-devops/ansible/deploy/roles/deployartifact/tasks/main.yml
+++ b/platform-devops/ansible/deploy/roles/deployartifact/tasks/main.yml
@@ -4,37 +4,66 @@
 - name: stop tomcat
   sercice: name=tomcat state=stopped
 
-- name: copy the consumer-config.xml
-  template: src=consumer-config.xml.j2 dest=/data/properties
 
 - name: copy the database.properties
-  template: src=database.properties.j2 dest=/data/properties
-
-
-- name: copy the elasticsearch.properties
-  template: src=elasticsearch.properties.j2 dest=/data/properties
+  template: src=language/database.properties.j2 dest=/data/properties/language
 
 - name: copy the graph.properties
-  template: src=graph.properties.j2 dest=/data/properties
+  template: src=language/graph.properties.j2 dest=/data/properties/language
 
 
 - name: copy the language-indexes.properties
-  template: src=language-indexes.properties.j2 dest=/data/properties
+  template: src=language/language-indexes.properties.j2 dest=/data/properties/language
 
 
 - name: copy the mongo.properties
-  template: src=mongo.properties.j2 dest=/data/properties
+  template: src=language/mongo.properties.j2 dest=/data/properties/language
+
+#------------------------------------------------------------------------------------
+
+- name: copy the consumer-config.xml
+  template: src=learning/consumer-config.xml.j2 dest=/data/properties/learning
+
+- name: copy the database.properties
+  template: src=learning/database.properties.j2 dest=/data/properties/learning
+
+- name: copy the elasticsearch.properties
+  template: src=learning/elasticsearch.properties.j2 dest=/data/properties/learning
+
+- name: copy the graph.properties
+  template: src=learning/graph.properties.j2 dest=/data/properties/learning
+
+- name: copy the mongo.properties
+  template: src=learning/mongo.properties.j2 dest=/data/properties/learning
 
 
-- name: copy the producer.properties
-  template: src=producer.properties.j2 dest=/data/properties
+#------------------------------------------------------------------------------------
+- name: copy the elasticsearch.properties
+  template: src=search/elasticsearch.properties.j2 dest=/data/properties/search
+#------------------------------------------------------------------------------------
+- name: copy the artifacts files 
+  copy: src=learning-service.war dest=/home/ec2-user/apache-tomcat-8.0.35/webapps
 
 - name: copy the artifacts files
-  copy: src=taxonomy-service.war dest=/home/ec2-user/apache-tomcat-8.0.35/webapps
+  copy: src=search-service.war dest=/home/ec2-user/apache-tomcat-8.0.35/webapps
 
+- name: copy the artifacts files
+  copy: src=language-service.war dest=/home/ec2-user/apache-tomcat-8.0.35/webapps
 
-- name: remove
-  file: name=/home/ubuntu/apache-tomcat-8.0.35/webapps/taxonomy-service state=absent
+- name: copy the artifacts file config-service.war
+  copy: src=config-service.war dest=/home/ec2-user/apache-tomcat-8.0.35/webapps
+#------------------------------------------------------------------------------------
+- name: remove learning-service.war
+  file: name=/home/ec2-user/apache-tomcat-8.0.35/webapps/learning-service.war state=absent
+
+- name: remove search-service.war
+  file: name=/home/ec2-user/apache-tomcat-8.0.35/webapps/search-service.war state=absent
+
+- name: remove language-service.war
+  file: name=/home/ec2-user/apache-tomcat-8.0.35/webapps/language-service.war state=absent
+
+- name: remove config-service.war
+  file: name=/home/ec2-user/apache-tomcat-8.0.35/webapps/config-service.war state=absent
 
 
 - name: start tomcat
