--- a/platform-devops/ansible/setup/roles/tomcat/tasks/main.yml
+++ b/platform-devops/ansible/setup/roles/tomcat/tasks/main.yml
@@ -3,7 +3,6 @@
   get_url: url=http://mirror.fibergrid.in/apache/tomcat/tomcat-8/v8.0.35/bin/apache-tomcat-8.0.35.tar.gz dest=/home/ec2-user/apache-tomcat-8.0.35.tar.gz timeout=1000 force=no owner=ec2-user
 
 - name: Extract archive
-  #command: chdir=/usr/share /bin/tar xvf /opt/apache-tomcat-7.0.61.tar.gz -C /opt/ creates=/home/ec2-user/apache-tomcat-7.0.61
   unarchive: src=/home/ec2-user/apache-tomcat-8.0.35.tar.gz dest=/home/ec2-user copy=no group=ec2-user owner=ec2-user creates={{ tomcat_home }}
 
 
@@ -14,50 +13,39 @@
   file: path=/usr/share/tomcat/ owner=ec2-user group=ec2-user state=directory recurse=yes
 
 - name: Configure Tomcat server
-  become: yes
   template: src=server.xml dest=/usr/share/tomcat/conf/
-  #notify: restart tomcat
 
-- name: Configure Tomcat users
-  become: yes
-  template: src=tomcat-users.xml dest=/usr/share/tomcat/conf/
-  #notify: restart tomcat
 
 - name: Install Tomcat init script
-  become: yes
   copy: src=tomcat-initscript.sh dest=/etc/init.d/tomcat mode=0755
 
-#- name: Start Tomcat
-  #become_user: ec2-user
-  #become: yes
- # service: name=tomcat state=started enabled=yes
-
 - name: deploy iptables rules
-  become: yes
   template: src=iptables-save dest=/etc/sysconfig/iptables
   notify: restart iptables
 
-#- name: copy catalina
-#  become: yes
-#  template: src=catalina.j2 dest=/home/ec2-user/apache-tomcat-8.0.35/bin/catalina.sh
+- name: copy catalina
+  template: src=catalina.j2 dest=/home/ec2-user/apache-tomcat-8.0.35/bin/catalina.sh
 
-- name: add a string to the new file
-  become: yes
-  lineinfile: dest=/home/ec2-user/apache-tomcat-8.0.35/bin/catalina.sh
-                regexp='#!/bin/sh'
-                line='#!/bin/sh \n export JAVA_OPTS="{{ tomcat_init_mem }} {{ tomcat_max_mem }}  -XX:+CMSClassUnloadingEnabled {{ tomcat_perm_size }}"'
-                state=present
+- name: create Catalina
+  file: path=/home/ec2-user/apache-tomcat-8.0.35/conf/Catalina state=directory mode=0655 
 
 
-- name: copy content
-  become: yes
-  template: src=context.xml dest=/home/ec2-user/apache-tomcat-8.0.35/conf
+- name: create localhost
+  file: path=/home/ec2-user/apache-tomcat-8.0.35/conf/Catalina/localhost state=directory mode=0655 
 
 
-#- name: Install Tomcat init script
-#  become_user: lpdeploy
-#  become: yes
-#  template: src=tomcat-initscript.sh dest=/etc/init.d/tomcat mode=0755
+- name: copy language-service.xml
+  template: src=language-service.xml dest=/home/ec2-user/apache-tomcat-8.0.35/conf/Catalina/localhost
+
+- name: copy learning-service.xml
+  template: src=learning-service.xml dest=/home/ec2-user/apache-tomcat-8.0.35/conf/Catalina/localhost
+
+- name: copy search-service.xml
+  template: src=search-service.xml dest=/home/ec2-user/apache-tomcat-8.0.35/conf/Catalina/localhost
+
+- name: set permission
+  file: path=/home/ec2-user/apache-tomcat-8.0.35 owner=ec2-user group=ec2-user recurse=yes
+
 
 #- name: Tomcat Home
 #  become_user: lpdeploy
@@ -69,5 +57,3 @@
 #  become: yes
 #  lineinfile: dest=.bashrc  line='CATALINA_HOME=/home/ubuntu/apache-tomcat-8.0.35/webapps' owner=lpdeploy state=present insertafter=EOF create=yes
 
-#- name: wait for tomcat to start
- # wait_for: port={{http_port}}
