--- a/platform-devops/ansible/setup/roles/elasticsearch/tasks/main.yml
+++ b/platform-devops/ansible/setup/roles/elasticsearch/tasks/main.yml
@@ -8,7 +8,7 @@
 - name: Install Elasticsearch.
   yum: pkg=elasticsearch state=installed
 
-- name: start
+- name: stop
   service: name=elasticsearch state=stopped
 
 - name: copy  
