--- a/platform-devops/ansible/setup/roles/logstash/tasks/main.yml
+++ b/platform-devops/ansible/setup/roles/logstash/tasks/main.yml
@@ -18,22 +18,36 @@
 - name: set permissions
   file: path=/home/ec2-user/logstash-2.3.3 owner=ec2-user group=ec2-user mode=0755 recurse=yes 
 
-- name: Check if logstash is running
+- name: Check if logstash graph events is running
   become_user: ec2-user
-  shell: ps -ef | grep logstash | grep logstash-graph-events.conf | grep -v grep
+  shell: ps -ef | grep logstash | grep logstash-graph-events.conf | grep -v grep | wc -l
   register: logstash_process
 
 
-- name: Check if logstash is running
+- name: Check if logstash language graph events is running
   become_user: ec2-user
-  shell: ps -ef | grep logstash | grep language-graph-events.conf | grep -v grep
+  shell: ps -ef | grep logstash | grep language-graph-events.conf | grep -v grep | wc -l
   register: language_process
 
+- name: test logstash
+  debug: msg="{{logstash_process.stdout}}"
+
+- name: test language
+  debug: msg="{{language_process.stdout}}"
 
 - name: Run logstash
-  shell: chdir=/home/ec2-user/logstash-2.3.3  bin/logstash -f /home/ec2-user/logstash-2.3.3/logstash-graph-events.conf -v &
-  when: "logstash_process.stdout == -1"
+  become_user: ec2-user
+  become: yes
+  shell: /home/ec2-user/logstash-2.3.3/bin/logstash -f /home/ec2-user/logstash-2.3.3/logstash-graph-events.conf -v &
+  async: 60
+  poll: 30
+  when: "logstash_process.stdout == '0'"
 
-- name: Run logstash
+
+- name: Run logstash language
+  become_user: ec2-user
+  become: yes
   shell: chdir=/home/ec2-user/logstash-2.3.3  bin/logstash -f /home/ec2-user/logstash-2.3.3/language-graph-events.conf -v &
-  when: "language_process.stdout == -1"
+  async: 60
+  poll: 30
+  when: "language_process.stdout == '0'"
