--- a/language-platform/module/controllers/pom.xml
+++ b/language-platform/module/controllers/pom.xml
@@ -46,6 +46,13 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.ekstep</groupId>
+			<artifactId>searchindex-elasticsearch</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
+		</dependency>
+		
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
@@ -75,13 +82,6 @@
 			<version>1.0-SNAPSHOT</version>
 			<type>jar</type>
 			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.ekstep</groupId>
-			<artifactId>composite-search-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
-			<scope>jar</scope>
 		</dependency>
 	</dependencies>
 	<build>
