--- a/searchIndex-platform/module/searchindex-elasticsearch/pom.xml
+++ b/searchIndex-platform/module/searchindex-elasticsearch/pom.xml
@@ -19,6 +19,12 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.ilimi</groupId>
+			<artifactId>ekstep-common</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
