--- a/platform-devops/ansible/setup/install.yml
+++ b/platform-devops/ansible/setup/install.yml
@@ -1,8 +1,8 @@
 - hosts: all
   become: yes
   vars: 
-       access: "{{ lookup('env', 'aws_access_key') }}"
-       secret: "{{ lookup('env', 'aws_secret_key') }}"
+       access: "{{ lookup('env', 'lp_aws_access_key_id') }}"
+       secret: "{{ lookup('env', 'lp_aws_secret_access_key') }}"
   roles:
         - aws-login
         #- java
