CWP -- Initialiser and Finalizer Module Added

--- a/platform-modules/service/src/main/resources/content.properties
+++ b/platform-modules/service/src/main/resources/content.properties
@@ -3,3 +3,11 @@ dist.directory = /data/tmp/dist/
 output.zipfile = /data/tmp/story.zip
 source.folder  = /data/tmp/temp2/
 save.directory = /data/tmp/temp/
+
+# FOR CONTENT WORKFLOW PIPELINE (CWP) 
+
+#--Content Workflow Pipeline Mode
+OPERATION_MODE = TEST
+
+#--Maximum Content Package File Size Limit in Bytes (20 MB)
+MAX_CONTENT_PACKAGE_FILE_SIZE_LIMIT = 20971520 
