--- a/platform-modules/manager/pom.xml
+++ b/platform-modules/manager/pom.xml
@@ -97,6 +97,18 @@
 		    <version>2.2.0</version>
 		</dependency>
 		<dependency>
+		    <groupId>net.javacrumbs.json-unit</groupId>
+		    <artifactId>json-unit</artifactId>
+		    <version>1.12.1</version>
+		    <scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>net.javacrumbs.json-unit</groupId>
+		    <artifactId>json-unit-fluent</artifactId>
+		    <version>1.12.1</version>
+		    <scope>test</scope>
+		</dependency>
+		<dependency>
             <groupId>net.bramp.ffmpeg</groupId>
             <artifactId>ffmpeg</artifactId>
             <version>0.4</version>
