--- a/platform-modules/service/src/main/resources/content.properties
+++ b/platform-modules/service/src/main/resources/content.properties
@@ -11,3 +11,6 @@ OPERATION_MODE = TEST
 
 #--Maximum Content Package File Size Limit in Bytes (20 MB)
 MAX_CONTENT_PACKAGE_FILE_SIZE_LIMIT = 20971520 
+
+#--Maximum Asset File Size Limit in Bytes (20 MB)
+MAX_ASSET_FILE_SIZE_LIMIT = 20971520
