wordChain Relation Unit tests

--- a/language-platform/module/controllers/src/test/resources/graph.properties
+++ b/language-platform/module/controllers/src/test/resources/graph.properties
@@ -3,3 +3,5 @@ redis.host=localhost
 redis.port=6379
 redis.maxConnections=128
 akka.request_timeout=30
+graph.ids=language,en,hi,ka,te,ta,enTest,kaTest
+environment.id=10000000
