--- a/language-platform/module/controllers/src/test/resources/language-map.properties
+++ b/language-platform/module/controllers/src/test/resources/language-map.properties
@@ -11,3 +11,5 @@ testdictionary=testdictionary
 testcreatedictionary=testcreatedictionary
 testsearch=testsearch
 testparser=testparser
+enTest=english
+kaTest=kannada
