Updated deploy scripts for LP

--- a/platform-devops/ansible/deploy/roles/deployartifact/tasks/main.yml
+++ b/platform-devops/ansible/deploy/roles/deployartifact/tasks/main.yml
@@ -2,6 +2,8 @@
 #tasks file for deployartifact
 
 - name: stop tomcat
+  become_user: ec2-user
+  become: yes
   service: name=tomcat state=stopped
 
 
@@ -67,6 +69,45 @@
 
 
 - name: start tomcat
+  become_user: ec2-user
+  become: yes
   service: name=tomcat state=started
+
+- name: wait for tomcat to start
+  wait_for: port=8080
+
+- name: check language-service/service
+  shell: curl 'http://{{ service_url }}/language-service/service' | grep '"healthy":false' | wc -l
+  register: language_process
+
+- name: check search-service/service
+  shell: curl 'http://{{ service_url }}/search-service/service' | grep '"healthy":false' | wc -l
+  register: search_process
+
+- name: check learning-service/service
+  shell: curl 'http://{{ service_url }}/learning-service/service' | grep '"healthy":false' | wc -l
+  register: learning_process
+
+- name: check config-service/service
+  shell: curl 'http://{{ service_url }}/config-service/service' | grep '"healthy":false' | wc -l
+  register: config_process
+
+
+- name: failing language-service/service
+  fail: msg="Response Failing for the  language-service/service"
+  when: "language_process.stdout >='1'"
+
+- name: failing search-service/service
+  fail: msg="Response Failing for the search-service/service"
+  when: "search_process.stdout >= '1'"
+
+- name: failing learning-service/service
+  fail: msg="Response Failing for the learning-service/service"
+  when: "learning_process.stdout >= '1'"
+
+- name: failing config-service/service
+  fail: msg="Response Failing for the config-service/service"
+  when: "config_process.stdout >= '1'"
+
 
 
