--- a/platform-devops/ansible/roles/redis/tasks/main.yml
+++ b/platform-devops/ansible/roles/redis/tasks/main.yml
@@ -17,8 +17,14 @@
 - name: Change ownership of redis installation
   file: path={{ redis_home }} owner=ec2-user group=ec2-user state=directory recurse=yes
 
+- name: redis conf
+  lineinfile: dest={{ redis_home }}/bin/catalina.sh
+                regexp='dir./'
+                line='dir /home/ec2-user/redis-stable/'
+                state=present
+
 - name: Go to the folder and run make
-  command: chdir={{ redis_home }} make 
+  command: chdir={{ redis_home }} make
 
 - name: Check if redis is running
   shell: ps -ef | grep redis | grep -v grep
