Retry Count Key in Content Configuration

--- a/platform-modules/service/src/main/resources/content.properties
+++ b/platform-modules/service/src/main/resources/content.properties
@@ -14,3 +14,6 @@ MAX_CONTENT_PACKAGE_FILE_SIZE_LIMIT = 52428800
 
 #--Maximum Asset File Size Limit in Bytes (20 MB)
 MAX_ASSET_FILE_SIZE_LIMIT = 20971520
+
+#--No of Retry While File Download Fails
+RETRY_ASSET_DOWNLOAD_COUNT = 1
